<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addequipmentname_hint">Equipment Name</string>
    <string name="addequipmentquantity_hint"><i>Quantity</i></string>
    <string name="addequipment_button">Add Equipment</string>
    <string name="removeequipment_button">Remove Equipment</string>
    <string name="addsupplyname_hint">Supply Name</string>
    <string name="addsupplyquantity_hint">Quantity</string>
    <string name="addsupplyunit_hint">Unit</string>
    <string name="removesupply_button">Remove Supply</string>
    <string name="addsupply_button">Add Supply</string>
    <string name="staffschedule_header">Add Staff Member</string>
    <string name="addstaff_header">Add Staff Member</string>
    <string name="addstaffmembername_hint">Staff Member Name</string>
    <string-array name="roles">
        <item>Cashier</item>
        <item>Chef</item>
        <item>Inventory Clerk</item>
        <item>Manager</item>
    </string-array>
</resources>
