<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="ca.mcgill.ecse321.foodtruckmanagementsystem.MainActivity"
        tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#E1338A"
        android:id="@+id/errorhandler"

        />

    <View
            android:layout_height="2dp"
            android:layout_width="344dp"
            android:background="#f44242"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="#425ff4"/>
            <EditText
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:id="@+id/addequipment_name"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:hint="@string/addequipmentname_hint"/>
            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="#425ff4"/>
            <EditText
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:id="@+id/addequipment_quantity"
                android:textStyle="italic"
                android:hint="@string/addequipmentquantity_hint"/>
            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="#425ff4"/>
        </LinearLayout>
        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#f44242"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addEquipment"
                android:text="@string/addequipment_button"
                android:layout_gravity="left"
                android:onClick="addEquipment" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/removeEquipment"
                android:text="@string/removeequipment_button"
                android:layout_gravity="right"
                android:onClick="removeEquipment" />
        </LinearLayout>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#f44242"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="#425ff4"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:id="@+id/addsupply_name"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:hint="@string/addsupplyname_hint"/>
        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="#425ff4"/>
        <EditText
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:inputType="numberSigned"
            android:id="@+id/addsupply_quantity"
            android:textStyle="italic"
            android:hint="@string/addsupplyquantity_hint"/>
        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="#425ff4"/>
        <EditText
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:id="@+id/addsupply_unit"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:hint="@string/addsupplyunit_hint"/>
        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="#425ff4"/>


    </LinearLayout>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#f44242"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addSupply"
            android:text="@string/addsupply_button"
            android:layout_gravity="left"
            android:onClick="addSupply" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/removeSupply"
            android:text="@string/removesupply_button"
            android:layout_gravity="right"
            android:onClick="removeSupply" />
    </LinearLayout>

</LinearLayout>
